2016-04-18  Ben Elliston  <bje@gnu.org>

	* runtest: Remove quoting in final exec command.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp: Load ssh.exp lib.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* lib/rsh.exp (rsh_open): Fix description comment.

2016-04-17  Ben Elliston  <bje@gnu.org>

	Reported by shellcheck.
	* runtest: Use $((..)) not `expr ..` and defensively double quote
	shell variables.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* Makefile.am (pkgdata_DATA): Add lib/ssh.exp, lib/dmucs.exp.
	* Makefile.in: Regenerate.

2016-04-17  Ben Elliston  <bje@gnu.org>

	Reported by shellcheck.
	* runtest: Use $((..)) not `expr ..`.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Update version number.
	* configure: Regenerate.
	* runtest.exp (frame_version): Update version number.
	* doc/dejagnu.texi: Likewise.

2016-04-17  Ben Elliston  <bje@gnu.org>

	* NEWS: Start a new section for the next release.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* Makefile.am (CONTRIB): Add new contrib scripts.
	* Makefile.in: Regenrate.

2016-04-15  Ben Elliston  <bje@gnu.org>

	* lib/ssh.exp (ssh_exec): Handle regexp return status.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* lib/rsh.exp (rsh_exec): Improve verbose message.
	* lib/ssh.exp (ssh_exec): Likewise.
	* config/adb.exp: Likewise.

2016-04-13  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Improve --version (-v) output.
	* testsuite/runtest.all/options.exp: Update test case.

2016-04-13  Christophe Lyon  <christophe.lyon@linaro.org>

	* lib/rsh.exp (rsh_exec): Handle regexp return status.

2016-04-08  Ben Elliston  <bje@gnu.org>

	Reported by Faraz Shahbazker.
	* doc/dejagnu.texi (Global config file): Fix broken @node.
	(Local config file): Likewise.

2016-04-07  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (remote_exec): Join cd $remotedir and $program on
	the command line with ';' and not &&.

2016-04-07  Ben Elliston  <bje@gnu.org>

	Reported by Faraz Shahbazker.