@@ -1,0 +1,34 @@
+# This is a list of toolchains that are supported on this board.
+set_board_info target_install {msp430-elf}
+
+# Load the generic configuration for this board. This will define a basic set
+# of routines needed by the tool to communicate with the board.
+load_generic_config "sim"
+
+# basic-sim.exp is a basic description for the standard Cygnus simulator.
+load_base_board_description "basic-sim"
+
+# "msp430" is the name of the sim subdir.
+setup_sim msp430
+
+# No multilib options needed by default.
+process_multilib_options ""
+
+# We only support newlib on this target. We assume that all multilib
+# options have been specified before we get here.
+
+set_board_info compiler  "[find_gcc]"
+set_board_info cflags    "[libgloss_include_flags] [newlib_include_flags] -msim"
+set_board_info ldflags   "[libgloss_link_flags] [newlib_link_flags]"
+
+# Doesn't pass arguments or signals, and doesn't do inferiorio.
+set_board_info noargs 1
+set_board_info gdb,nosignals 1
+set_board_info gdb,noinferiorio 1
+set_board_info gdb,no_hardware_watchpoints 1
+set_board_info gdb,skip_huge_test 1
+
+# Limit the stack size to something real tiny.
+set_board_info gcc,stack_size 4096
+set_board_info gcc,no_trampolines  1
+set_board_info gcc,timeout 30
